Bug 1822340 part 1: Fix cached text bounds for wrapped text which starts part way through a line or where the primary text frame is empty. r=morgan, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D173096