accessible/tests/browser/e10s/browser_caching_text_bounds.js
@@ -7,6 +7,11 @@
 /* import-globals-from ../../mochitest/layout.js */
 loadScripts({ name: "layout.js", dir: MOCHITESTS_DIR });
 
+// Note that testTextNode, testChar and testTextRange currently don't handle
+// white space in the code that doesn't get rendered on screen. To work around
+// this, ensure that containers you want to test are all on a single line in the
+// test snippet.
+
 async function testTextNode(accDoc, browser, id) {
   await testTextRange(accDoc, browser, id, 0, -1);
 }
@@ -621,6 +626,48 @@ addAccessibleTask(
       [magicX.value, magicY.value, magicW.value, magicH.value],
       [expectedX.value, expectedY.value, expectedW.value, expectedH.value],
       "GetRangeExtents correct with TEXT_OFFSET_CARET/END_OF_TEXT"
+    );
+  },
+  { chrome: true, topLevel: !isWinNoCache, remoteIframe: !isWinNoCache }
+);
+
+/**
+ * Test wrapped text and pre-formatted text beginning with an empty line.
+ */
+addAccessibleTask(
+  `
+<style>
+  #wrappedText {
+    width: 3ch;
+    font-family: monospace;
+  }
+</style>
+<p id="wrappedText"><a href="https://example.com/">a</a>b cd</p>
+<p id="emptyFirstLine" style="white-space: pre-line;">
+foo</p>
+  `,
+  async function(browser, docAcc) {
+    await testChar(docAcc, browser, "wrappedText", 0);
+    await testChar(docAcc, browser, "wrappedText", 1);
+    await testChar(docAcc, browser, "wrappedText", 2);
+    await testChar(docAcc, browser, "wrappedText", 3);
+    await testChar(docAcc, browser, "wrappedText", 4);
+
+    // We can't use testChar for emptyFirstLine because it doesn't handle white
+    // space properly. Instead, verify that the first character is at the top
+    // left of the text leaf.
+    const emptyFirstLine = findAccessibleChildByID(docAcc, "emptyFirstLine", [
+      nsIAccessibleText,
+    ]);
+    const emptyFirstLineLeaf = emptyFirstLine.firstChild;
+    const leafX = {};
+    const leafY = {};
+    emptyFirstLineLeaf.getBounds(leafX, leafY, {}, {});
+    testTextPos(
+      emptyFirstLine,
+      0,
+      [leafX.value, leafY.value],
+      COORDTYPE_SCREEN_RELATIVE
     );
   },
   { chrome: true, topLevel: !isWinNoCache, remoteIframe: !isWinNoCache }
